Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.1(EOL)
-
None
-
10.1.14
Description
Apparently, CREATE ROLE is blocked when using a password validation plugin. It's not clear why this should be the case, or how to avoid this, as there is no way to provide a password when creating a role.
> install soname 'simple_password_check';
|
Query OK, 0 rows affected (0.00 sec)
|
> create role 'myrole';
|
ERROR 1819 (HY000): Your password does not satisfy the current policy requirements
|
Attachments
Issue Links
- relates to
-
MDEV-9908 cracklib plugin crashes server on CREATE ROLE
-
- Closed
-